<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <!-- Navigation Section -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/navigation_toolbar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/walkie_talkie"
        android:src="@drawable/signal"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toStartOf="@id/fab_phone"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_phone"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/phone"
        android:src="@drawable/phone"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:maxImageSize="40dp"
        android:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/message"
        android:src="@drawable/message_active"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toEndOf="@id/fab_phone"
        app:maxImageSize="40dp"
        android:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp" />

    <!-- ListView to display chat messages -->
    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:dividerHeight="10dp" />

    <!-- Container for sending a message -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

    <!-- Input field for the message -->
    <EditText
        android:id="@+id/messageInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/message_prompt"
        android:autofillHints="Hello"
        android:inputType="text" />

    <!-- Send button -->
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
