<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".MainActivity">

    <!-- Navigation Section -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/navigation_toolbar"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/walkie_talkie"
        android:src="@drawable/signal"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toStartOf="@id/fab_phone"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_phone"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/phone"
        android:src="@drawable/phone_active"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:maxImageSize="40dp"
        android:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:elevation="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/message"
        android:src="@drawable/message"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toEndOf="@id/fab_phone"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <!-- Contacts Section -->
    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/navy_blue"
        app:layout_constraintTop_toBottomOf="@id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Contact widget -->
    <LinearLayout
        android:id="@+id/contacts_section"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:background="@drawable/user_widget"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/contacts_label">

        <ImageView
            android:id="@+id/fab_user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/user"
            android:src="@drawable/user" />

        <!-- Contact variables -->
        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Butthead"
            android:textSize="16sp"
            android:paddingHorizontal="20dp" />

        <TextView
            android:id="@+id/contact_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Poop Captain"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:paddingHorizontal="20dp" />
    </LinearLayout>

    <!-- Call Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/call"
        android:src="@drawable/phone_active"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
