<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- Navigation Section -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_toolbar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/walkie_talkie"
        android:src="@drawable/signal_active"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toStartOf="@id/fab_phone"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/phone"
        android:src="@drawable/phone"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toStartOf="@id/navigation"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/message"
        android:src="@drawable/message"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/navigation"
        app:layout_constraintEnd_toEndOf="@id/navigation"
        app:layout_constraintStart_toEndOf="@id/fab_phone"
        app:layout_constraintTop_toTopOf="@id/navigation"
        app:maxImageSize="40dp" />

    <!-- Contacts Section -->
    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/contacts"
        android:textColor="@color/navy_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contacts_label"/>
</androidx.constraintlayout.widget.ConstraintLayout>